fix to make rtp work on java 17